# custodial-registration-proxy

./: .gitignore  CustodialRegistrationProxy.sol  README.md  requirements.txt  setup.cfg  setup.py
custodial_registration_proxy/: __init__.py  custodial_registration_proxy.py
custodial_registration_proxy/data/: CustodialRegistrationProxy.json  CustodialRegistrationProxy.metadata.json  metadata.json
custodial_registration_proxy/runnable/: publish.py
data/: CustodialRegistrationProxy.json
solidity/: CustodialRegistrationProxy.sol  Makefile
