[metadata]
name = custodial-registration-proxy
version = 0.1.0
description = Atomically registers a custodial user on-chain and provisions necessary gas and training vouchers.
long_description = Atomically registers a custodial user on-chain and provisions necessary gas and training vouchers.
author = Mohamed Sohail
author_email = sohail@grassecon.org
url = https://github.com/grassrootseconomics/custodial-registration-proxy
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
	Topic :: Software Development :: Libraries
license = AGPLv3+
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages = 
	custodial_registration_proxy
	custodial_registration_proxy.runnable

[options.package_data]
* =
 	**/data/*.json
 	**/data/*.bin

[options.entry_points]
console_scripts =
	ge-custodial-registration-proxy-publish = custodial_registration_proxy.runnable.publish:main
